--- a/Literally A Word Game/Assembly-CSharp.csproj
+++ b/Literally A Word Game/Assembly-CSharp.csproj
@@ -48,6 +48,8 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Item.cs" />
      <Compile Include="Assets\Scripts\Lee.cs" />
+     <Compile Include="Assets\Scripts\LetterScript.cs" />
+     <Compile Include="Assets\Scripts\LetterTrackerScript.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
