Added Lee and tree sprites. Changed controls (arrow keys to move left and right and climb, space to jump, C to pick up/drop object)

--- a/Literally A Word Game/Assembly-CSharp.csproj
+++ b/Literally A Word Game/Assembly-CSharp.csproj
@@ -46,8 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\Item.cs" />
-     <Compile Include="Assets\Scripts\Lee.cs" />
+     <Compile Include="Assets\Scripts\LeeScript.cs" />
+     <Compile Include="Assets\Scripts\LetterScript.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
