--- a/Literally A Word Game/Assembly-CSharp-vs.csproj
+++ b/Literally A Word Game/Assembly-CSharp-vs.csproj
@@ -46,8 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\Item.cs" />
-     <Compile Include="Assets\Scripts\Lee.cs" />
+     <Compile Include="Assets\Scripts\LeeScript.cs" />
+     <Compile Include="Assets\Scripts\LetterScript.cs" />
  <Reference Include="Assembly-UnityScript-firstpass">
  <HintPath>Library\ScriptAssemblies\Assembly-UnityScript-firstpass.dll</HintPath>
  </Reference>
