--- a/Literally A Word Game/Assembly-CSharp-vs.csproj
+++ b/Literally A Word Game/Assembly-CSharp-vs.csproj
@@ -46,8 +46,10 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\CloudsTransitionScript.cs" />
+     <Compile Include="Assets\Scripts\ItemScript.cs" />
      <Compile Include="Assets\Scripts\LeeScript.cs" />
-     <Compile Include="Assets\Scripts\LetterScript.cs" />
+     <Compile Include="Assets\Scripts\MainRoomScript.cs" />
  <Reference Include="Assembly-UnityScript-firstpass">
  <HintPath>Library\ScriptAssemblies\Assembly-UnityScript-firstpass.dll</HintPath>
  </Reference>
