--- a/Literally A Word Game/Assembly-CSharp.csproj
+++ b/Literally A Word Game/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
      <Compile Include="Assets\Scripts\LetterScript.cs" />
      <Compile Include="Assets\Scripts\LetterTrackerScript.cs" />
      <Compile Include="Assets\Scripts\MainRoomScript.cs" />
+     <Compile Include="Assets\Scripts\RoomStateScript.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
